src/main/default/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>A_o__c</fullName>
        <label>Año</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAE__c</fullName>
        <label>CAE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capital_final__c</fullName>
        <label>Capital final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comisi_n_dealer__c</fullName>
        <label>Comisión dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concesionario__c</fullName>
        <label>Concesionario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Concesionario</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Costo_de_acci_n__c</fullName>
        <label>Costo de acción</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costo_total_cr_dito__c</fullName>
        <label>Costo total crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cuot_n__c</fullName>
        <label>Cuotón</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cuotas__c</fullName>
        <label>Cuotas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_as_de_Desfase_c__c</fullName>
        <label>Días de Desfase</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_creacion__c</fullName>
        <label>Fecha creación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_simulacion_portal__c</fullName>
        <inlineHelpText>Corresponde al ID de simulación del portal Amicar Indexa que se está cotizando para la renovación.</inlineHelpText>
        <label>ID Simulación</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Simulacion__c</fullName>
        <externalId>true</externalId>
        <label>Id de Simulación</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interes_por_desfase__c</fullName>
        <label>Interes por desfase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marcas__c</fullName>
        <label>Marcas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marcas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margen_nuevo_vehiculo__c</fullName>
        <label>Margen nuevo vehiculo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margen_vehiculo_usado__c</fullName>
        <label>Margen vehiculo usado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modelo__c</fullName>
        <label>Modelo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pie__c</fullName>
        <label>Pie</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <label>Plazo</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rentabilidad_Total__c</fullName>
        <formula>Margen_nuevo_vehiculo__c + Margen_vehiculo_usado__c + Comisi_n_dealer__c - Costo_de_acci_n__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rentabilidad Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retoma__c</fullName>
        <label>Retoma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_precio__c</fullName>
        <label>Saldo precio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tabla_Seguro__c</fullName>
        <label>Tabla Seguro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tasa__c</fullName>
        <label>Tasa</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tasa_dealer__c</fullName>
        <label>Tasa dealer</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tipo_Cuota__c</fullName>
        <label>Tipo Cuota</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cuota Fija</fullName>
                </value>
                <value>
                    <fullName>Cuota Variable</fullName>
                </value>
                <value>
                    <fullName>Cuota 0</fullName>
                </value>
                <value>
                    <fullName>Compra Inteligente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_Veh_culo__c</fullName>
        <label>Tipo Vehículo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Todos</fullName>
                </value>
                <value>
                    <fullName>Liviano - Nuevo</fullName>
                </value>
                <value>
                    <fullName>Liviano - Usado</fullName>
                </value>
                <value>
                    <fullName>Comercial - Nuevo</fullName>
                </value>
                <value>
                    <fullName>Comercial - Usado</fullName>
                </value>
                <value>
                    <fullName>Maquinaria Pesada - Nueva</fullName>
                </value>
                <value>
                    <fullName>Maquinaria Pesada - Usada</fullName>
                </value>
                <value>
                    <fullName>Moto - Nuevas</fullName>
                </value>
                <value>
                    <fullName>Moto - Usadas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Tasa__c</fullName>
        <label>Eliminar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRIME</fullName>
                    <label>Prime</label>
                </value>
                <value>
                    <fullName>CONVERSION</fullName>
                    <label>Conversión</label>
                </value>
                <value>
                    <fullName>NORMAL</fullName>
                    <label>Normal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_financiamiento__c</fullName>
        <label>Tipo de financiamiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_financiamiento</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_tasa2__c</fullName>
        <label>Tipo de Tasa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_tasa</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Toma__c</fullName>
        <label>Toma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_a_financiar__c</fullName>
        <label>Total a financiar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VFMG__c</fullName>
        <label>VFMG</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valor_UF__c</fullName>
        <label>Valor UF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cuota__c</fullName>
        <label>Valor cuota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>id_credito_original__c</fullName>
        <formula>Opportunity.id_credito_original__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Crédito Ogirinal</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Simulaciones_Aprobadas</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>Concesionario__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QUOTE.STATUS</field>
            <operation>equals</operation>
            <value>Aceptado jefe de ventas</value>
        </filters>
        <label>Simulaciones Aprobadas</label>
        <sharedTo>
            <group>Externos_AG</group>
            <group>Externos_Derco</group>
            <portalRole>ComunidadDercoSocioUsuario</portalRole>
            <portalRole>ComunidadGildemeisterSocioUsuario</portalRole>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Simulaciones_Pendientes</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>Concesionario__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QUOTE.STATUS</field>
            <operation>equals</operation>
            <value>Pendiente Aprobación</value>
        </filters>
        <label>Simulaciones Pendientes</label>
        <sharedTo>
            <group>Externos_AG</group>
            <group>Externos_Derco</group>
            <portalRole>ComunidadDercoSocioUsuario</portalRole>
            <portalRole>ComunidadGildemeisterSocioUsuario</portalRole>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Simulaciones_Presentadas</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>Concesionario__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QUOTE.STATUS</field>
            <operation>equals</operation>
            <value>Presentado jefe de ventas</value>
        </filters>
        <label>Simulaciones Presentadas</label>
        <sharedTo>
            <group>Externos_AG</group>
            <group>Externos_Derco</group>
            <portalRole>ComunidadDercoSocioUsuario</portalRole>
            <portalRole>ComunidadGildemeisterSocioUsuario</portalRole>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>Presupuesto_Renovaciones</fullName>
        <active>true</active>
        <label>Presupuesto Renovaciones</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simulacion_CORE</fullName>
        <active>true</active>
        <label>Simulación CORE</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>